<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>4.0.5</version>
        <relativePath/>
    </parent>

    <groupId>com.asc</groupId>
    <artifactId>identity</artifactId>
    <version>1.2.0</version>
    <packaging>pom</packaging>

    <profiles>
        <profile>
            <id>win</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>minified</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <modules>
                <module>minified</module>
            </modules>
        </profile>
    </profiles>

    <mailingLists>
        <mailingList>
            <name>support</name>
            <post>mailto:support@onlyoffice.com</post>
        </mailingList>
    </mailingLists>
    <issueManagement>
        <system>GitHub Issues</system>
        <url>https://github.com/ONLYOFFICE/DocSpace/issues</url>
    </issueManagement>

    <modules>
        <module>authorization</module>
        <module>common</module>
        <module>infrastructure</module>
        <module>registration</module>
    </modules>

    <properties>
        <annotations.version>6.0.53</annotations.version>
        <aws.version>4.0.0</aws.version>
        <aws.cloudwatch.version>2.42.27</aws.cloudwatch.version>
        <blackbird.version>3.1.1</blackbird.version>
        <bucket4j.version>8.10.1</bucket4j.version>
        <caffeine.caching.version>3.2.3</caffeine.caching.version>
        <dependency.maven.check.plugin.version>12.2.0</dependency.maven.check.plugin.version>
        <depgraph.maven.plugin.version>4.0.3</depgraph.maven.plugin.version>
        <flyway.version>12.3.0</flyway.version>
        <graal.version>25.0.2</graal.version>
        <grpc.version>1.80.0</grpc.version>
        <grpc.starter.version>3.1.0.RELEASE</grpc.starter.version>
        <jsystemd.version>4.0.0</jsystemd.version>
        <junit.jupiter.version>6.0.3</junit.jupiter.version>
        <logback.gelf.version>6.1.2</logback.gelf.version>
        <logback.logstash.version>9.0</logback.logstash.version>
        <mockito.version>5.23.0</mockito.version>
        <mysql.connector.version>9.6.0</mysql.connector.version>
        <resilience4j.version>2.4.0</resilience4j.version>
        <shedlock.version>7.7.0</shedlock.version>
        <spring.oauth2.server.version>7.0.4</spring.oauth2.server.version>
        <springdoc.version>3.0.2</springdoc.version>
        <spring.jcl.version>6.2.17</spring.jcl.version>
        <testcontainers.version>2.0.4</testcontainers.version>
        <os.maven.plugin.version>1.7.1</os.maven.plugin.version>
        <protobuf.maven.plugin.version>0.6.1</protobuf.maven.plugin.version>
        <winsw.maven.plugin.version>0.1.10</winsw.maven.plugin.version>

        <!-- Protoc Versions -->
        <protoc.version>3.25.8</protoc.version>
        <protoc.gen.version>1.80.0</protoc.gen.version>

        <!-- Maven and Java Versions -->
        <java.version>25</java.version>
        <maven.compiler.plugin.vesrion>3.15.0</maven.compiler.plugin.vesrion>
        <maven.documentation.plugin.version>1.4</maven.documentation.plugin.version>
        <maven.formatter.plugin.version>2.29</maven.formatter.plugin.version>
        <maven.google.format.version>1.35.0</maven.google.format.version>
        <maven.surefire.plugin.version>3.5.5</maven.surefire.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Internal Dependencies -->
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>authorization-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-autoconfigurations</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>common-utilities</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>infrastructure-configuration</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>infrastructure-migration-runner</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.asc</groupId>
                <artifactId>registration-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>io.grpc</groupId>
                <artifactId>grpc-bom</artifactId>
                <version>${grpc.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Utility Dependencies -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>

        <!-- Logging Dependencies -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>

        <!-- Validation Dependencies -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>

        <!-- Spring Web -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-web</artifactId>
        </dependency>

        <!-- Testing Dependencies -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.springframework</groupId>
          <artifactId>spring-jcl</artifactId>
          <version>${spring.jcl.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers-junit-jupiter</artifactId>
          <version>${testcontainers.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers-rabbitmq</artifactId>
          <version>${testcontainers.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers-mysql</artifactId>
          <version>${testcontainers.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.testcontainers</groupId>
          <artifactId>testcontainers-localstack</artifactId>
          <version>${testcontainers.version}</version>
          <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.mockito</groupId>
          <artifactId>mockito-junit-jupiter</artifactId>
          <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.vesrion}</version>
                <configuration>
                    <release>25</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
                    <environmentVariables>
                        <TESTCONTAINERS_RYUK_DISABLED>true</TESTCONTAINERS_RYUK_DISABLED>
                    </environmentVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>${dependency.maven.check.plugin.version}</version>
                <configuration>
                    <skipProvidedScope>true</skipProvidedScope>
                </configuration>
                <executions>
                    <execution>
                        <id>run-dependency-check</id>
                        <phase>site</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>com.github.ferstl</groupId>
                <artifactId>depgraph-maven-plugin</artifactId>
                <version>${depgraph.maven.plugin.version}</version>
            </plugin>
            <plugin>
                <groupId>com.spotify.fmt</groupId>
                <artifactId>fmt-maven-plugin</artifactId>
                <version>${maven.formatter.plugin.version}</version>
                <dependencies>
                    <dependency>
                        <groupId>com.google.googlejavaformat</groupId>
                        <artifactId>google-java-format</artifactId>
                        <version>${maven.google.format.version}</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>format</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
